[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/EqpFctyUI.gd" type="Script" id=1]
[ext_resource path="res://UI/EqpBuildInfoRT.gd" type="Script" id=2]
[ext_resource path="res://UI/BuildStatus.gd" type="Script" id=3]
[ext_resource path="res://font/led_font.tres" type="DynamicFont" id=4]

[node name="Fcty" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Build" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Build"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EqpBuildInfoRT" type="RichTextLabel" parent="Build/HBoxContainer"]
margin_right = 820.0
margin_bottom = 600.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BuildList" type="VBoxContainer" parent="Build/HBoxContainer"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildStatus" type="VBoxContainer" parent="Build/HBoxContainer/BuildList"]
visible = false
margin_right = 200.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Name" type="Label" parent="Build/HBoxContainer/BuildList/BuildStatus"]
margin_right = 200.0
margin_bottom = 12.0

[node name="HSeparator" type="HSeparator" parent="Build/HBoxContainer/BuildList/BuildStatus"]
margin_top = 16.0
margin_right = 200.0
margin_bottom = 20.0

[node name="Image" type="TextureRect" parent="Build/HBoxContainer/BuildList/BuildStatus"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 24.0

[node name="ProgressBar" type="ProgressBar" parent="Build/HBoxContainer/BuildList/BuildStatus"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 40.0

[node name="Queue" type="VBoxContainer" parent="Build/HBoxContainer/BuildList"]
margin_right = 200.0
margin_bottom = 191.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Build/HBoxContainer/BuildList/Queue"]
margin_right = 200.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "Build Queue"
align = 1
valign = 1

[node name="Queue" type="ItemList" parent="Build/HBoxContainer/BuildList/Queue"]
margin_top = 31.0
margin_right = 200.0
margin_bottom = 191.0
size_flags_vertical = 3

[node name="List" type="ItemList" parent="Build/HBoxContainer/BuildList"]
margin_top = 195.0
margin_right = 200.0
margin_bottom = 577.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
fixed_icon_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Build/HBoxContainer/BuildList"]
margin_top = 581.0
margin_right = 200.0
margin_bottom = 599.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="Build/HBoxContainer/BuildList/Queue/Queue" to="." method="_on_Queue_item_activated"]
[connection signal="item_activated" from="Build/HBoxContainer/BuildList/List" to="." method="_on_List_item_activated"]
[connection signal="item_selected" from="Build/HBoxContainer/BuildList/List" to="." method="_on_List_item_selected"]
[connection signal="pressed" from="Build/HBoxContainer/BuildList/OK" to="." method="_on_OK_pressed"]
